--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.5'
+    implementation 'androidx.databinding:databinding-runtime:8.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
