--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SuppleClock"
         tools:targetApi="31">
+
+        <service android:name=".ui.AlarmService" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".ui.MusicService" android:foregroundServiceType="mediaPlayback"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
