--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
@@ -18,6 +19,7 @@
 
         <service android:name=".ui.AlarmService" android:foregroundServiceType="mediaPlayback"/>
         <service android:name=".ui.MusicService" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".ui.NotificationService" android:foregroundServiceType="mediaPlayback"/>
 
         <activity
             android:name=".MainActivity"
@@ -35,6 +37,8 @@
         </activity>
 
         <receiver android:process=":remote" android:name=".ui.AlarmReciever" />
+        <receiver android:process=":remote" android:name=".ui.NotificationSendReciever" />
+
     </application>
 
 
